removed old tutorials

--- a/lightkurve/Exercise_1-Solutions.ipynb
+++ b/lightkurve/Exercise_1-Solutions.ipynb
@@ -4,20 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Challenge 2: Extracting Light Curves using Different Masks\n",
+    "# Exercise: Extracting Light Curves using Different Masks\n",
     "\n",
     "## Goal\n",
     "\n",
     "When working with NASA Kepler, K2 and TESS data, the assumptions we make when we build the aperture can drastically effect our light curve. In this exercise we will investigate how changing the aperture can impact the signal to noise of a transit detection. We will use the *Pi Mensae* light curve from TESS sector 1."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solutions\n",
-    "\n",
-    "This worksheet lays out the problems, and contains some skeleton code to get you started. You can find the worked solution in the `exercise_x_solution.ipynb` file."
    ]
   },
   {
