--- a/lightkurve/Workshop.ipynb
+++ b/lightkurve/Workshop.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# [TESS Data Workshop](http://www.stsci.edu/institute/conference/tess): Lightkurve Tutorial\n",
+    "\n",
+    "[Christina Hedges](https://twitter.com/TheChedgehog), [Geert Barentsen](https://twitter.com/geerthub), [Nick Saunders](https://twitter.com/nksaunders), [Zé Vinícius](https://twitter.com/mircaze),  and collaborators.*\n",
+    "\n",
+    "In this tutorial, we will demonstrate the new `lightkurve` package, which you can read all about [here](http://docs.lightkurve.org/tutorials/). We will demonstrate the workflow of lightkurve for TESS data, and show off a few of our tools for planet detection.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -19,15 +25,16 @@
     "* [4. Making Simple Corrections to Light Curves](#4.-Making-simple-corrections-to-light-curves)\n",
     "    * [4.1 Folding Light Curves](#4.1-Folding-Light-Curves)\n",
     "    * [4.2 Stringing Commands Together](#4.2-Stringing-Commands-Together)\n",
-    "* [5. Converting Light Curves to Other Formats](#5.-Converting-light-curves-to-other-formats)\n"
+    "* [5. Converting Light Curves to Other Formats](#5.-Converting-light-curves-to-other-formats)\n",
+    "* [6. Searching for Targets](#6.-Searching-for-Targets)\n",
+    "    * [6.1 Radius Queries](#6.1-Radius-Queries)\n",
+    "    * [6.2 Obtaining TESS FFI Cut-outs](#6.2-Obtaining-TESS-FFI-Cut-outs)\n",
+    "    * [6.3 Stitching Light Curves](#6.3-Stitching-Light-Curves)\n",
+    "* [7. Periodograms](#7.-Periodograms)\n",
+    "    * [7.1 BLS Periodograms](#7.1-BLS-Periodograms)\n",
+    "    * [7.2 Interactively searching with BLS](#7.2-Interactively-searching-with-BLS)\n",
+    "* [8. Troubleshooting and Contributing](#8.-Troubleshooting-and-Contributing)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -39,7 +46,9 @@
     "* lightkurve version 1.0b26 (use pip install lightkurve --upgrade)\n",
     "\n",
     "Once you have looked through this workshop, we also have a full set of tutorials on all of the functionality of lightkurve available here:\n",
-    "* http://docs.lightkurve.org/tutorials/"
+    "* http://docs.lightkurve.org/tutorials/\n",
+    "\n",
+    "If you have worked through this tutorial, you can also work through the follow on tutorial on the Box Least Squares periodogram, which will go into more detail on how to find planets in TESS data."
    ]
   },
   {
@@ -2360,11 +2369,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 8. Troubleshooting and Contributing\n",
+    "\n",
+    "Lightkurve is available on [github](github.com/keplerGO/lightkurve). If you have problems when using lightkurve, or think you've found a bug, please go ahead and submit an issue to our github describing the problem. We will try to get back to you quickly and fix your issue! If you would like to contribute a new feature to lightkurve and join our author list, please open a pull request with your new feature and we'll work with you to get it merged into lightkurve. \n",
+    "\n",
+    "Congratulations on finishing the tutorial! We also have a full set of tutorials online at our [docs](http://docs.lightkurve.org/) which will go into more detail on all of our features. If you are stuck at any point, check out our full tutorials online."
+   ]
   }
  ],
  "metadata": {
